# neu-sdk

./: .gitignore  pyproject.toml
.github/workflows/: formatter.yml  linter.yml  python-package.yml  release.yml  testing.yml
neu_sdk/: interface.py
neu_sdk/communication/: __init__.py  rest.py
neu_sdk/config/: __init__.py  logging.py  settings.py
neu_sdk/gateway/: __init__.py  tyk.py
neu_sdk/registry/: __init__.py  consul.py
neu_sdk/security/: __init__.py  authorization.py
