[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neu-sdk"
dynamic = ["version"]
description = 'Neu sdk module'
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [
  { name = "Viktor Karamanis", email = "viktor.karamanis@outlook.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "pyjwt==2.9.0",
  "bcrypt==4.2.0",
  "python-dotenv==1.0.1",
  "pydantic==2.8.2",
  "pydantic-settings==2.4.0",
  "rich==13.7.1",
  "aiohttp==3.10.3",
  "aiodns==3.2.0",
]

[project.urls]
Homepage = "https://github.com/poulet-lab/neu-sdk"
Documentation = "https://github.com/poulet-lab/neu-sdk"
Changelog = "https://github.com/poulet-lab/neu-sdk/release-notes/"
Source = "https://github.com/poulet-lab/neu-sdk"


[tool.hatch.version]
path = "neu_sdk/__init__.py"

[tool.hatch.envs.lint]
detached = true
require = ["default"]
dependencies = ["mypy>=1.13.0", "ruff>=0.7.2"]

[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:neu_sdk tests}"
style = "ruff check {args:.}"
fmt = ["ruff format {args:.}", "style"]
all = ["style", "typing"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 120
indent-width = 4
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true
line-ending = "auto"
docstring-code-line-length = "dynamic"

[tool.ruff.isort]
known-first-party = ["neu_sdk"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.coverage.run]
source_pkgs = ["neu_sdk", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
neu_sdk = ["neu_sdk", "*/neu-sdk/neu_sdk"]
tests = ["tests", "*/neu-sdk/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
